--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>Web-Robot</title>
     <script src="assets/JS/main.js"></script>
     <!-- <script>
@@ -11,9 +12,22 @@
     </script> -->
 </head>
 <body>
-    <img src="assets/images/Robot.jpg">
-    <!--<button onclick="console.log('Hi, I am ready to take directions')">Start</button>-->
-    <button onclick="onButtonClick()">Start Now</button>
-    <button onclick="selectRoom()">Ready to go</button>
+    <section class="container">
+        <section class="robot-container">
+            <img src="assets/images/Robot.jpg">
+             <!--<button onclick="console.log('Hi, I am ready to take directions')">Start</button>-->
+            <button onclick="onButtonClick()">Start Now</button>
+            <button onclick="selectRoom()">Ready to go</button>
+        </section>
+        <section class="robot-interaction">
+            <div class="output">
+                <span>"Hello I am ready to direct you!"</span>
+            </div>
+            <div class="input">
+                <input type="text">
+            </div>
+        </section>
+    </section>
+    
 </body>
 </html>
