hide/show of output elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         console.log('Hi I am from within the html');
     </script> -->
 </head>
-<body>
+<body onload="initialise()">
     <section class="container">
         <section class="robot-container">
             <img src="assets/images/Robot.jpg">
